<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/colorLightPrimary">

    <TextView
        android:id="@+id/quantity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        tools:text="@string/quantity1"/>

    <TextView
        android:id="@+id/measure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:textSize="18sp"
        tools:text="@string/measure1"/>

    <TextView
        android:id="@+id/ingredient_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingRight="8dp"
        android:textSize="18sp"
        tools:text="@string/ingredient_item1" />

</LinearLayout>